           * rename pyproj.so _pyproj.so, added a python wrapper pyproj.py,
		     moved pyproj into matplotlib.toolkits.basemap.
20061117:  version 0.9.4
           * added "Tissot's indicatrix" example.
           * 'extent' keyword was erroneously being passed to pcolor.
           * update proj4 source files to version 4.5.0.
           * updated pyproj to version 1.8.0 (better error handling).
20061017:  version 0.9.3
           * update pyproj.c to be compatible with python 2.5.
           * added new example ccsm_popgrid.py (contributed by Ivan Lima).
20060831:  version 0.9.2
           * fixed several bugs in drawlsmask method.
           * removed buggy optimizations for cylindrical projections not
             crossing the Greenwich meridian.
           * can now specify map projection region by setting width and height
             in projection coordinates (in meters) instead of specifying
             lat/lon of upper right and lower left corners.
20060727:  version 0.9.1
           * make sure llcrnrlat and llcrnrlon are not at poles for mercator.
           * use Eric Firing's new quiver in Basemap quiver method.
           * interp functions now work with masked arrays.
           * added some sanity checks for projection parameters.
           * change from classic to new-style classes.
           * removed deprecated 'createfigure' method.
           * fixed some creeping numpy'isms (which caused breakage
             when numarray or Numeric were used).
20060609:  version 0.9:
           * updated for new matplotlib aspect ratio handling.
           Now maps will always have the correct aspect ratio.
           * if resolution keyword is set to None when Basemap
           instance is created, no boundary data sets are needed
           (methods to draw boundaries, like drawcoastlines, will 
           raise an exception).
           * update to proj4 module - renamed pyproj to avoid 
           conflicts with proj4 module from CDAT.